--- a/src/app/usuario/menu/menu.component.html
+++ b/src/app/usuario/menu/menu.component.html
@@ -15,8 +15,8 @@
                             <nav class="side-menu">
                                 <ul class="nav">
                                     <li class="active"><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'info' } }]"><span class="fa fa-user"></span> Información Principal</a></li>
-                                    <li><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'vehiculos' } }]">Vehiculos</a></li>
-                                    <li><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'calificaciones' } }]">Calificaciones</a></li>
+                                    <li class="active"><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'vehiculos' } }]"><span class="fa fa-user"></span>Vehiculos</a></li>
+                                    <li class="active"><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'calificaciones' } }]">Calificaciones</a></li>
                                     <li><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'notificaciones' } }]">Notificaciones<span class="badge badge-danger" style="float:right;">{{notificacionesPendientes}}</span></a></li>
                                     <li><a [routerLink]= "['/usuario/menu', { outlets: { 'content': 'buscarUsuario' } }]"> Buscar usuario</a></li>
                                     <li><a routerLink = '/home' (click) = 'logOut()'>Log Out</a></li>
