--- a/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.html
+++ b/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.html
@@ -5,30 +5,27 @@
     <div class="row">
       <div class="col-2">
         <img
-          src="../../../../carritoImagen.png"
+          src="../../../../kombiLove.jpg"
           width="100%"
           class="img-rounded"
           vertical-align="middle"
           alt="Icono"
         />
       </div>
-      <div class="col-8" text-align="center">
-          <div id="mensaje" class="row">
-            Enviada por:  
-          </div>
-          <div class="row">
+      <div class="col-md-offset-100" text-align="center">
+          <div class="col-md-offset-20">
             id: {{vehiculo.id}}
           </div>  
-          <div class="row">
+          <div class="col-md-offset-100">
             Alquilado: {{vehiculo.alquilado}}
           </div>  
-          <div class="row">
+          <div class="col-md-offset-150">
             Color: {{vehiculo.color}}
           </div>  
-          <div class="row">
+          <div class="col-md-offset-20">
             Modelo: {{vehiculo.modelo}}
           </div> 
-          <div class="row">
+          <div class="col-md-offset-20">
             Placa: {{vehiculo.placa}}
           </div> 
       </div>
