Auto stash before merge of "master" and "origin/master"

--- a/src/app/usuario/usuario-info/usuario-info.component.html
+++ b/src/app/usuario/usuario-info/usuario-info.component.html
@@ -1,6 +1,6 @@
 <div class="content-panel">
                 <h2 class="title">Perfil</h2>
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" *ngIf="usuario!=null">
                         <fieldset class="fieldset">
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nombre</label>
