Correciones pequeñas de links
Correciones pequeñas de links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
   
   <div class="col-sm-2">
     <div class="" *ngIf="usernameActual != 'vacio'">
-      <a routerLink="/usuario/menu">
+      <a routerLink="['/usuario/menu', { outlets: { 'content': 'info' } }]">
         <div class="row row-eq-height">
           <div class="col-sm-3 my-auto" *ngIf="usuario">
             {{ usuario.nombre }}
