Fotos y cambios estéticos

--- a/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.html
+++ b/src/app/usuario/usuario-vehiculos/usuario-vehiculos.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-offset-100" text-align="center">
           <div class="col-md-offset-20">
-            id: {{vehiculo.id}}
+            ID: {{vehiculo.id}}
           </div>  
           <div class="col-md-offset-100">
             Alquilado: {{vehiculo.alquilado}}
