--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,9 +1,10 @@
 <div class="">
   
 <div class="bg"></div>
-<div class="row justify-content-center">
-    
-<div class="col-sm-10"   style="background-image: url(../../../../fondoTransparente.png);  background-repeat: no-repeat; background-size: cover; background-position: center center;">
+<div class="row justify-content-center" style="background-image: url(../../../../fondoTransparente.png);  background-repeat: no-repeat; background-size: cover; background-position: center center;">
+  <div class="container m-5">
+    <div class="rounded2" style="background-color:#FFFFFF;">
+<div class="col-sm-12"   >
 
 
     <br>
@@ -113,33 +114,44 @@
   </div>
     
         <div class="d-flex justify-content-center">
+          <div class="m-3">
+          <div class="col-sm-1">
             <button type="submit" class="btn btn-primary" routerLink="/home">Buscar</button>
+          </div>
+          </div>
         </div>
       
       </form>
      
  </div>
+</div>
+</div>
+ <div class="row ">
+    <div class="col-sm-12"></div>
+  </div> 
  </div>
 <br>
- <div class="row"> 
-   <div class="col-sm-12">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="background-color:#EBEBEB;">
+ <div class="row justify-content-center" *ngIf="ciudades!=null"> 
+   <div class="col-sm-6">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
           
-          <div class="carousel-inner">
+          <div class="carousel-inner" >
               <div class="carousel-item active">
                   <div class="d-flex justify-content-center">
-                      <div class="card" style="width: 18rem;"  alt="First slide">
-                          <img class="card-img-top" src="https://http2.mlstatic.com/montable-electrico-mercedes-benz-injusa-6v-auto-carro-nino-D_NQ_NP_839208-MLM26835805673_022018-F.webp" alt="Card image cap">
+                      <div class="card" style="width: 18rem;" alt="First Slide">
+                          <img class="card-img-top" src="https://www.viajejet.com/wp-content/viajes/paisaje-marino-lago-jackson.jpg" alt="Card image cap">
                           <div class="card-body">
-                            <h5 class="card-title">Carpooling</h5>
-                            <p class="card-text">Trayectos a toda colombia y al mejor precio :3(CAMBIAR DESPUES XD)</p>
+                            <h5 class="card-title">Trayectos a {{ciudades[0].nombre}}</h5>
+                            <p class="card-text">Todos los trayectos que parten a {{ciudades[0].nombre}}</p>
+                            <button type="button" class="btn btn-primary" (click)="buscara(i)" >Buscar Ya</button>
                           </div>
                         </div>
                       </div>
                   </div>
+              
             <div class="carousel-item" *ngFor="let i of ciudades">
               <div class="d-flex justify-content-center">
-                <div class="card" style="width: 18rem;"  alt="First slide">
+                <div class="card" style="width: 18rem;" alt="First Slide">
                     <img class="card-img-top" src="https://www.viajejet.com/wp-content/viajes/paisaje-marino-lago-jackson.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Trayectos a {{i.nombre}}</h5>
@@ -149,6 +161,7 @@
                   </div>
                 </div>
             </div>
+            
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -163,4 +176,4 @@
    </div>
    
 </div>
-
+</div>
