--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
                Trayecto
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Crear Trayecto</a>
+                <a class="dropdown-item" href="/trayecto/create">Crear Trayecto</a>
                 <a class="dropdown-item" routerLink="/home">Buscar Trayecto</a>
                 <a class="dropdown-item" href="trayecto/mis-trayectos/">Mis trayectos</a>
               </div>
