Pequeños cambios estéticos

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -139,7 +139,7 @@
               <div class="carousel-item active">
                   <div class="d-flex justify-content-center">
                       <div class="card" style="width: 18rem;" alt="First Slide">
-                          <img class="card-img-top" src="https://www.viajejet.com/wp-content/viajes/paisaje-marino-lago-jackson.jpg" alt="Card image cap">
+                          <img class="card-img-top" src= "../../../../Bogotá.jpg" alt="Card image cap">
                           <div class="card-body">
                             <h5 class="card-title">Trayectos a {{ciudades[0].nombre}}</h5>
                             <p class="card-text">Todos los trayectos que parten a {{ciudades[0].nombre}}</p>
@@ -152,7 +152,7 @@
             <div class="carousel-item" *ngFor="let i of ciudades">
               <div class="d-flex justify-content-center">
                 <div class="card" style="width: 18rem;" alt="First Slide">
-                    <img class="card-img-top" src="https://www.viajejet.com/wp-content/viajes/paisaje-marino-lago-jackson.jpg" alt="Card image cap">
+                    <img class="card-img-top" src= "../../../../Medellín.jpg" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Trayectos a {{i.nombre}}</h5>
                       <p class="card-text">Todos los trayectos que parten a {{i.nombre}}</p>
