--- a/src/app/trayecto/mis-trayectos/mis-trayectos.component.html
+++ b/src/app/trayecto/mis-trayectos/mis-trayectos.component.html
@@ -29,6 +29,15 @@
 					origen: {{ trayecto.origen }}
 					
 				</div>
+				<div class="row">
+						<button
+						mat-button
+						(click)="pago(trayecto.id)"
+					>
+						Pagar
+					</button>
+						
+					</div>
 			  </div>
 			  
 			</div>
